# django-virtual-fields

./: .gitignore  README.md  conftest.py  manage.py  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: workflow.yaml
0.0.x/: 404.html  index.html
0.0.x/search/: search_index.json
docs/: index.md
examples/: apps.py  asgi.py  faker.py  models.py  settings.py  urls.py  wsgi.py
examples/example_01/: admin.py  apps.py  models.py  tests.py
examples/example_01/migrations/: 0001_initial.py
tests/: __init__.py  faker.py  test_env.py
tests/VirtualField/: test_by_output_field.py
tests/app/: apps.py  fields.py  models.py  settings.py  utils.py
tests/app/migrations/: 0001_initial.py
tests/test_virtual_fields/: apps.py  conftest.py  fields.py  models.py  settings.py
tests/test_virtual_fields/migrations/: 0001_initial.py
tests/test_virtual_fields/tests/: test_by_output_field.py  test_related.py
virtual_fields/: __init__.py  __init__.pyi  _compat.py  _util.py  apps.py  fields.py  models.py  related.py  testing.py
virtual_fields/fields/: __init__.py
virtual_fields/models/: _compat.py  fields.py
